--- a/WebApplication1/css/StyleYael.css
+++ b/WebApplication1/css/StyleYael.css
@@ -1,4 +1,19 @@
-﻿.indentStock{
+﻿
+#MainContent_NameQuestion{
+    background-color:white;
+    border:none;
+    width:550px;
+}
+#stockQuestionText{
+    color:#FF0000;
+}
+
+#MainContent_removeCourseBtnFromQ{
+
+    margin-right: 310px;
+}
+
+.indentStock{
 
     margin-right: 25px;
 }
@@ -16,7 +31,7 @@
     text-align:right;
     
      font-size:x-large;
-     //color:black;
+  
 }
 
 #MainContent_NameQuestionnaire{
@@ -36,12 +51,12 @@ color:white;
 
 .buttonStock{
     background:none;
- //   border:none;
+
 margin-right: 5px;
-//margin-top: 2px;
+
 font-size: large;
 color:white;
-border-color:black;
+border: none;
 }
 
 .buttonStock:hover {
@@ -65,12 +80,18 @@ border-color:black;
     
 }
 
+#QuestionnaireLiDiv{
+     background-color: #FF0000 ;
+}
+
+#QuestionLiDiv{
+
+}
 .QuestionnaireIndent .liDive{
 
-    background-color: #FF0000 ;
-    //lighting-color:#E00000;
-   // opacity: 0.8;
+
     height: 30px;
+    border: 2.5px solid black;
     
 }
 
@@ -103,14 +124,15 @@ border-color:black;
     color:white;
 }
 
-.QuestenClass{
+.QuestionClass{
 padding: 27px 33px 30px;
 border: 1px solid #eaeaea;
-background: url(../images/block-news-tail.gif) 0 0 repeat-x #f9f9f9;
+/*background: url(../images/block-news-tail.gif) 0 0 repeat-x #f9f9f9;*/
 border-radius: 18px;
 -moz-border-radius: 18px;
 -webkit-border-radius: 18px;
 min-height: 240px;
+margin-top: 55px;
 }
 
 #MainContent_courseName {
@@ -143,20 +165,64 @@ margin-right: 28px;
 	top:1px;
 }
 
-.buttonAddRemove{
- float: right;
-margin-top: 180px;
-margin-right: -404px;
-/*position: static;*/
-/*height: 100px;*/
+#MainContent_closeButtonQuestions{
+    float: right;
+margin-right: -16px;
+margin-top: -16px;
+
 }
 
+
+#buttonAddRemove{
+
+    margin-right: 18px;
+}
+
+#buttonAddRemoveQ{
+
+
+}
+
+.buttonAddRemove{
+
+  float: right;
+
+
+height:auto;
+right:auto;
+}
+
+#buttonCourses {
+   width: 655px;
+margin-right: 41px;
+min-height: 45px;
+}
+
+#buttonCoursesQ {
+    width: 253px;
+    margin-top: 100px;
+    height: 40px;
+    max-height: 100px;
+}
 #inputAddRemove{
-    border: 1px solid #999999;
+        border: 1px solid #999999;
 width: 300px;
+margin-right: 18px;
 }
 .buttonAddRemove li {
 
     text-align:right
+
+}
+
+#inputQtoRemove{
+        border: 1px solid #999999;
+width: 238px;
+
+float:right;
+}
+
+#MainContent_removeQname{
+    margin-right: 4px;
 
 }
