--- a/WebApplication1/css/StyleYael.css
+++ b/WebApplication1/css/StyleYael.css
@@ -64,7 +64,7 @@ border: none;
     color: black;
 }
 
-#classDisplayBtn{
+#MainContent_classDisplayBtn{
 
     float:left;
     margin-left: 40px;
@@ -73,6 +73,14 @@ border: none;
 }
 
 #staticBtn{
+
+    float:left;
+    margin-left: 40px;
+    height: 30px;
+    
+}
+
+#MainContent_staticBtn{
 
     float:left;
     margin-left: 40px;
@@ -225,4 +233,11 @@ float:right;
 #MainContent_removeQname{
     margin-right: 4px;
 
+}
+
+#QuestionnaireTitle{
+
+    font-size: 30px;
+      margin-right: -246px;
+  color: gray;
 }
