--- a/WebApplication1/Pages/Site.Master
+++ b/WebApplication1/Pages/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="WebApplication1.Pages.Site" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Clicker.Pages.Site" %>
 
 <!DOCTYPE html>
 
