--- a/WebApplication1/Pages/SiteStudent.Master
+++ b/WebApplication1/Pages/SiteStudent.Master
@@ -47,6 +47,8 @@
             <li><a class="active" href="HomePageStudent.aspx">דף הבית</a></li>
        
             <li><a href="ProfileStudent.aspx">פרטים אישיים</a></li>
+                           <li><a  href="StatisticStudent.aspx">סטטיסטיקה</a></li>
+
           </ul>
             <%}
             
@@ -55,6 +57,14 @@
               <ul class="menu">
             <li><a href="HomePageStudent.aspx">דף הבית</a></li>
             <li><a class="active" href="ProfileStudent.aspx">פרטים אישיים</a></li>
+            <li><a  href="StatisticStudent.aspx">סטטיסטיקה</a></li>
+          </ul>
+            <%}  else if (Page.Title.Equals("סטטיסטיקה"))
+              { %>
+                  <ul class="menu">
+            <li><a href="HomePageStudent.aspx">דף הבית</a></li>
+            <li><a  href="ProfileStudent.aspx">פרטים אישיים</a></li>
+            <li><a class="active" href="StatisticStudent.aspx">סטטיסטיקה</a></li>
           </ul>
             <%} %>
 
