text rtl in add course

--- a/WebApplication1/css/StyleYael.css
+++ b/WebApplication1/css/StyleYael.css
@@ -1,4 +1,14 @@
 ﻿
+
+
+
+    #MainContent_courseName{
+
+    text-align: right;
+     
+     direction: rtl;
+    }
+
 #questionText{
 
     color:red;
