--- a/WebApplication1/css/StyleBracha.css
+++ b/WebApplication1/css/StyleBracha.css
@@ -1079,7 +1079,7 @@ footer {
 .cellClass{
       height: 30px;
   font-size: 22px;
-  color:white;
+  color:green;
   text-decoration-color:white;
   margin-top: 7px;
 	line-height:2.2em;
