--- a/WebApplication1/Pages/SiteStudent.Master
+++ b/WebApplication1/Pages/SiteStudent.Master
@@ -47,26 +47,26 @@
             <li><a class="active" href="HomePageStudent.aspx">דף הבית</a></li>
        
             <li><a href="ProfileStudent.aspx">פרטים אישיים</a></li>
-                           <li><a  href="StatisticStudent.aspx">סטטיסטיקה</a></li>
+                           <li><a  href="StatisticStudent.aspx">היסטוריה</a></li>
 
           </ul>
             <%}
-            
+              else if (Page.Title.Equals("היסטוריה"))
+              { %>
+                  <ul class="menu">
+            <li><a href="HomePageStudent.aspx">דף הבית</a></li>
+            <li><a  href="ProfileStudent.aspx">פרטים אישיים</a></li>
+            <li><a class="active" href="StatisticStudent.aspx">היסטוריה</a></li>
+          </ul>
+            <%} 
               else if (Page.Title.Equals("פרטים אישיים"))
               { %>
               <ul class="menu">
             <li><a href="HomePageStudent.aspx">דף הבית</a></li>
             <li><a class="active" href="ProfileStudent.aspx">פרטים אישיים</a></li>
-            <li><a  href="StatisticStudent.aspx">סטטיסטיקה</a></li>
+            <li><a  href="StatisticStudent.aspx">היסטוריה</a></li>
           </ul>
-            <%}  else if (Page.Title.Equals("סטטיסטיקה"))
-              { %>
-                  <ul class="menu">
-            <li><a href="HomePageStudent.aspx">דף הבית</a></li>
-            <li><a  href="ProfileStudent.aspx">פרטים אישיים</a></li>
-            <li><a class="active" href="StatisticStudent.aspx">סטטיסטיקה</a></li>
-          </ul>
-            <%} %>
+            <%}  %>
 
         </nav>
             
